manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app
spec:
  selector:
    app: nginx-app
  ports:
  - port: 80
    targetPort: 8080
